bitfields/tests/compile_error_cases/errors/bitfield_custom_type_no_bit_size.rs
use bitfields::bitfield;

#[bitfield(u16)]
pub struct Bitfield {
    a: u8,
    b: CustomType,
}

enum CustomType {

}

fn main() {}
