bitfields/tests/compile_error_cases/errors/bitfield_custom_type_no_bit_size.stderr
error: Custom and nested field types require a defined bit size, otherwise we can't determine the size of the field.
 --> tests/compile_error_cases/errors/bitfield_custom_type_no_bit_size.rs:6:8
  |
6 |     b: CustomType,
  |        ^^^^^^^^^^
